[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-misuse-triage"
version = "1.0.0"
description = "A reinforcement learning environment for triage and classification of AI misuse."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask==3.0.0",
    "gunicorn==21.2.0",
    "pytest==7.4.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[tool.setuptools]
packages = ["openenv_misuse_triage"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]